--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -96,3 +96,9 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+      - name: Deploy to Kubernetes
+        run: |
+          echo "$KUBECONFIG" > kubeconfig.yaml
+          kubectl apply --kubeconfig kubeconfig.yaml -f deploy.yaml --namespace=microservices
+        env:
+          KUBECONFIG: ${{ secrets.KUBECONFIG }}
