--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway-clima-service
+  name: api-gateway-clima
 spec:
   type: ClusterIP
   selector:
@@ -27,6 +27,6 @@ spec:
       containers:
         - name: api-gateway-clima-container
           image: ghcr.io/joaquinuc150/api-gateway-granjabot:main
-
+          imagePullPolicy: Always
           ports:
             - containerPort: 4000
